--- a/todo_lists/templates/base.html
+++ b/todo_lists/templates/base.html
@@ -3,11 +3,12 @@
 
 <head>
     <!-- Insert header code here -->
-    <title>TODO Lists</title>
+    <title>ToDo Lists</title>
 </head>
 
 <body>
     <!-- Insert body code here -->
+    <h1>ToDo List</h1>
 </body>
 
 </html>
