--- a/todo_lists/templates/base.html
+++ b/todo_lists/templates/base.html
@@ -3,12 +3,13 @@
 
 <head>
     <!-- Insert header code here -->
-    <title>ToDo Lists</title>
+    <title>To-Do Lists</title>
 </head>
 
 <body>
     <!-- Insert body code here -->
-    <h1>ToDo List</h1>
+    <h1>To-Do List</h1>
+    <input id="id_new_item" placeholder="Enter a to-do item" />
 </body>
 
 </html>
